Graph stretch fix, table alignment

--- a/src/Table.css
+++ b/src/Table.css
@@ -8,7 +8,6 @@
 }
 
 .table tr {
-    display: flex;
     justify-content: space-between;
 }
 
